fix overflow on signup form in auth modal and disable scrolling on body when modal is open

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,8 +12,20 @@ body {
   font-family: "nunito sans", Arial, Helvetica, sans-serif;
 }
 
-.flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
